fix(app): card backface visibility hidden in firefox

--- a/packages/app/src/app/srs/card/card.component.scss
+++ b/packages/app/src/app/srs/card/card.component.scss
@@ -44,6 +44,7 @@
   top: 0;
   bottom: 0;
   backface-visibility: hidden;
+  transform: translateZ(0);
   display: flex;
   flex-direction: column;
   align-items: center;
